Update schema model